
    Rewrite the KV_* functions to use pure bash rather than awk #75836.

    Don't use 'none' when mounting virtual filesystems since `umount` can 
    produce some pretty vague output #78684.  Fixed sbin/rc and etc/fstab.

    modules-update.8 touchups by Benno Schulenberg #77582.

    Don't symlink /etc/filesystems since it is an user config file #74176.

    Punt the 'guest' user #74737.

  27 Jan 2004; Roy Marples <uberlord@gentoo.org>:

    removed udhcpc-* and dhclient-* helper modules and replaced them with a
    generic dhcp module which caters for all interfaces and dhcp clients that
    need it.
    We now prefer iproute2 over ifconfig if both are installed.

  24 Jan 2004; Roy Marples <uberlord@gentoo.org>:

    replaced awk commands with sed equivalents in net-scripts to make us
    more portable
    STYLE fixes to many net-scripts modules
    Removed hardcoded Version and replaced with cvs $Header:

  17 Jan 2004; Roy Marples <uberlord@gentoo.org>:

    net.lo changed logic to read "only fail if no configuration parameters
    work, bring interface down and abort". Fixes #78092
    all modules should now check interface existance correctly - fixes #76385
    wpa_supplicant now works with EAP - fixes #78367

  13 Jan 2004; Roy Marples <uberlord@gentoo.org>:

    wpa_supplicant forces ctrl_interface to /var/run/wpa_supplicant
    and removes stale directories
    clean_pidfile function no longer errors on empty pidfiles
    net dependancies corrected in runscript.sh - fixes #77839
    allow pure IPv6 addresses - fixes #73844

  12 Jan 2004; Roy Marples <uberlord@gentoo.org>:

    net.lo now ignores dot files when loading modules
    ipppd module now stops correctly - fixes #73067 again

  11 Jan 2004; Roy Marples <uberlord@gentoo.org>:

    added "noop" config parameter which means take no action if the interface
    is up and has an address configured, otherwise continue
    addresses are now removed when starting an interface - fixes #77111
