@@ -1,5 +1,5 @@
 #!/sbin/runscript
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header$
 
@@ -15,18 +15,15 @@ start() {
 	# properly configured /etc/mdadm.conf for mdadm usage. Devices in
 	# /etc/mdadm.conf are initialized first, so any duplicate devices in
 	# /etc/raidtab will not get initialized.
-	if [ -z "${CDBOOT}" -a -f /proc/mdstat ]
-	then
+	if [[ -z ${CDBOOT} ]] && [[ -f /proc/mdstat ]] ; then
 		local mdadm_devices=
 		local raidtools_devices=
 		# If /etc/mdadm.conf exists, grab all the RAID devices from it
-		if [ -f /etc/mdadm.conf ]
-		then
+		if [[ -f /etc/mdadm.conf ]] ; then
 			mdadm_devices=$(awk '/^[[:space:]]*ARRAY/ { print $2 }' /etc/mdadm.conf)
 		fi
 		# If /etc/raidtab exists, grab all the RAID devices from it
-		if [ -f /etc/raidtab ]
-		then
+		if [[ -f /etc/raidtab ]] ; then
 			raidtools_devices=$(awk '/^[[:space:]]*raiddev/ { print $2 }' /etc/raidtab)
 		fi
 		ebegin "Starting up RAID devices: "
@@ -34,13 +31,11 @@ start() {
 		local rc=0
 		local retval=0
 
-		for i in ${mdadm_devices}
-		do
-			local raiddev="${i##*/}"
-			local raidstat="$(egrep "^${raiddev} : active" /proc/mdstat)"
+		for i in ${mdadm_devices} ; do
+			local raiddev=${i##*/}
+			local raidstat=$(egrep "^${raiddev} : active" /proc/mdstat)
 
-			if [ -z "${raidstat}" ]
-			then
+			if [[ -z ${raidstat} ]] ; then
 				# First scan the /etc/fstab for the "noauto"-flag
 				# for this device. If found, skip the initialization
 				# for it to avoid dropping to a shell on errors.
@@ -48,27 +43,24 @@ start() {
 				# fall back to raidadd, raidrun.  If that
 				# also fails, then we drop to a shell
 				local retval=1
-				local noauto="$(egrep "^${i}" /etc/fstab | grep -c 'noauto')"
+				local noauto=$(egrep "^${i}" /etc/fstab | grep -c 'noauto')
 
 				einfon "  Trying ${raiddev}..."
 
 				raiddev=""
 				
-				if [ "${noauto}" -gt 0 ]
-				then
+				if [[ ${noauto} -gt 0 ]] ; then
 					retval=0
 					raiddev=" (skipped)"
 				fi
-				if [ "${retval}" -gt 0 -a -x /sbin/mdadm ]
-				then
+				if [[ ${retval} -gt 0 && -x /sbin/mdadm ]] ; then
 					/sbin/mdadm -As "${i}" &>/dev/null
 					retval=$?
 				fi
 
 				echo "${raiddev}"
 				
-				if [ "${retval}" -gt 0 ]
-				then
+				if [[ ${retval} -gt 0 ]] ; then
 					rc=1
 					eend ${retval}
 				else
@@ -77,13 +69,11 @@ start() {
 			fi
 		done
 
-		for i in ${raidtools_devices}
-		do
-			local raiddev="${i##*/}"
-			local raidstat="$(egrep "^${raiddev} : active" /proc/mdstat)"
-			
-			if [ -z "${raidstat}" ]
-			then
+		for i in ${raidtools_devices} ; do
+			local raiddev=${i##*/}
+			local raidstat=$(egrep "^${raiddev} : active" /proc/mdstat)
+
+			if [[ -z ${raidstat} ]] ; then
 				# First scan the /etc/fstab for the "noauto"-flag
 				# for this device. If found, skip the initialization
 				# for it to avoid dropping to a shell on errors.
@@ -91,29 +81,25 @@ start() {
 				# fall back to raidadd, raidrun.  If that
 				# also fails, then we drop to a shell
 				local retval=1
-				local noauto="$(egrep "^${i}" /etc/fstab | grep -c 'noauto')"
+				local noauto=$(egrep "^${i}" /etc/fstab | grep -c 'noauto')
 
 				einfon "  Trying ${raiddev}..."
 
 				raiddev=""
-				
-				if [ "${noauto}" -gt 0 ]
-				then
+
+				if [[ ${noauto} -gt 0 ]] ; then
 					retval=0
 					raiddev=" (skipped)"
 				fi
-				if [ "${retval}" -gt 0 -a -x /sbin/raidstart ]
-				then
+				if [[ ${retval} -gt 0 && -x /sbin/raidstart ]] ; then
 					/sbin/raidstart "${i}"
 					retval=$?
 				fi
-				if [ "${retval}" -gt 0 -a -x /sbin/raid0run ]
-				then
+				if [[ ${retval} -gt 0 && -x /sbin/raid0run ]] ; then
 					/sbin/raid0run "${i}"
 					retval=$?
 				fi
-				if [ "${retval}" -gt 0 -a -x /sbin/raidadd -a -x /sbin/raidrun ]
-				then
+				if [[ ${retval} -gt 0 && -x /sbin/raidadd && -x /sbin/raidrun ]] ; then
 					/sbin/raidadd "${i}"
 					/sbin/raidrun "${i}"
 					retval=$?
@@ -121,8 +107,7 @@ start() {
 
 				echo "${raiddev}"
 
-				if [ "${retval}" -gt 0 ]
-				then
+				if [[ ${retval} -gt 0 ]] ; then
 					rc=1
 					eend ${retval}
 				else
@@ -132,8 +117,7 @@ start() {
 		done
 
 		# A non-zero return means there were problems.
-		if [ "${rc}" -gt 0 ]
-		then
+		if [[ ${rc} -gt 0 ]] ; then
 			echo
 			eerror "An error occurred during the RAID startup"
 			eerror "Dropping you to a shell; the system will reboot"
@@ -150,8 +134,7 @@ start() {
 	#
 	# EVMS2 summport for /usr, /var ....
 	#
-	if [ -z "${CDBOOT}" -a -f /sbin/evms_activate ]
-	then
+	if [[ -z ${CDBOOT} ]] && [[ -f /sbin/evms_activate ]] ; then
 		ebegin "Activating EVMS2"
 		evms_activate
 		retval=$?	
@@ -165,14 +148,14 @@ start() {
 	# NOTE: Add needed modules for LVM or RAID, etc
 	#       to /etc/modules.autoload if needed
 
-	if [ -z "${CDBOOT}" -a -x /sbin/vgscan ] && \
-	   [ -d /proc/lvm -o "$(grep device-mapper /proc/misc 2>/dev/null)" ]
+	if [[ -z ${CDBOOT} && -x /sbin/vgscan ]] && \
+	   [[ -d /proc/lvm || -n $(grep -qo device-mapper /proc/misc) ]]
 	then
 		ebegin "Setting up the Logical Volume Manager"
 		#still echo stderr for debugging
-		/sbin/vgscan >/dev/null
-		if [ "$?" -eq 0 ] && [ -x /sbin/vgchange ] && \
-		   [ -f /etc/lvmtab -o -d /etc/lvm ]
+		/sbin/vgscan > /dev/null
+		if [[ $? -eq 0 ]] && [[ -x /sbin/vgchange ]] && \
+		   [[ -f /etc/lvmtab || -d /etc/lvm ]]
 		then
 			/sbin/vgchange -a y >/dev/null
 		fi
@@ -181,13 +164,11 @@ start() {
 
 	dm-crypt-start
 
-	if [ -f /fastboot -o -n "${CDBOOT}" ]
-	then
+	if [[ -f /fastboot ]] || [[ -n ${CDBOOT} ]] ; then
 		rm -f /fastboot
 	else
 		ebegin "Checking all filesystems"
-		if [ -f /forcefsck ]
-		then
+		if [[ -f /forcefsck ]] ; then
 			ewarn "A full fsck has been forced"
 			fsck -C -R -A -a -f
 			retval=$?
@@ -196,11 +177,9 @@ start() {
 			fsck -C -T -R -A -a
 			retval=$?
 		fi
-		if [ "${retval}" -eq 0 ]
-		then
+		if [[ ${retval} -eq 0 ]] ; then
 			eend 0
-		elif [ "${retval}" -ge 1 -a "${retval}" -le 3 ]
-		then
+		elif [[ ${retval} -ge 1 && ${retval} -le 3 ]] ; then
 			ewend 1 "Filesystem errors corrected."
 			# Everything should be ok, so return a pass
 			return 0
@@ -215,9 +194,9 @@ start() {
 # here, make sure to change it there also!
 dm-crypt-start() {
 	local cryptfs_status=0 
-	local mountline mount swap options pre_mount post_mount source
+	local gpg_options key loop_file mount mountline options pre_mount post_mount source swap
 
-	if [ -f /etc/conf.d/cryptfs ] && [ -x /bin/cryptsetup ]; then
+	if [[ -f /etc/conf.d/cryptfs ]] && [[ -x /bin/cryptsetup ]] ; then
 		ebegin "Setting up dm-crypt mappings"
 
 		while read mountline; do
@@ -231,11 +210,11 @@ dm-crypt-start() {
 					dm-crypt-execute
 
 					# Prepare for the next mount/swap by resetting variables
-					unset mount swap options pre_mount post_mount source
+					unset gpg_options key loop_file mount options pre_mount post_mount source swap
 					;;
 
-				options=*|pre_mount=*|post_mount=*|source=*)
-					if [[ -z ${mount} && -z ${swap} ]]; then
+				gpg_options=*|key=*|loop_file=*|options=*|pre_mount=*|post_mount=*|source=*)
+					if [[ -z ${mount} && -z ${swap} ]] ; then
 						ewarn "Ignoring setting outside mount/swap section: ${mountline}"
 						continue
 					fi
@@ -266,13 +245,21 @@ dm-crypt-start() {
 dm-crypt-execute() {
 	local dev target
 
-	if [[ -n ${mount} ]]; then
+	if [[ -n ${loop_file} ]] ; then
+		dev="/dev/mapper/${target}"
+		ebegin "  Setting up loop device ${source}"
+		/sbin/losetup ${source} ${loop_file} 
+	fi
+
+	if [[ -n ${mount} ]] ; then
 		target=${mount}
 		: ${options:='-c aes -h sha1'}
-	elif [[ -n ${swap} ]]; then
+	elif [[ -n ${swap} ]] ; then
 		target=${swap}
 		: ${options:='-c aes -h sha1 -d /dev/urandom'}
 		: ${pre_mount:='mkswap ${dev}'}
+	elif [[ -n ${key} ]] ; then
+		: ${gpg_options:='--quiet -d'}
 	else
 		return
 	fi
@@ -283,12 +270,32 @@ dm-crypt-execute() {
 	fi
 
 	ebegin "dm-crypt map ${target}"
-	/bin/cryptsetup ${options} create ${target} ${source} >/dev/console </dev/console
-	eend $? "failure running cryptsetup"
-	if [[ $? != 0 ]]; then
+	if [[ -z ${key} ]] ; then
+		/bin/cryptsetup ${options} create ${target} ${source} >/dev/console </dev/console
+		eend $? "failure running cryptsetup"
+	else
+		if [[ -x /usr/bin/gpg ]] ; then
+			retval=1
+			while [[ $retval -gt 0 ]] ; do
+				keystring=$(gpg ${gpg_options} ${key} 2>/dev/null </dev/console)
+				if [[ -z ${keystring} ]] ; then
+					retval=5
+				else
+					/bin/cryptsetup ${options} create ${target} ${source} << EOF
+${keystring}
+EOF
+					retval=$?
+				fi
+			done
+			eend $retval
+		else
+			einfo "You have to install app-crypt/gpg first"
+		fi
+	fi
+	if [[ $? != 0 ]] ; then
 		cryptfs_status=1
 	else
-		if [[ -n ${pre_mount} ]]; then
+		if [[ -n ${pre_mount} ]] ; then
 			dev="/dev/mapper/${target}"
 			ebegin "  Running pre_mount commands for ${target}"
 			eval "${pre_mount}" > /dev/null
