@@ -16,6 +16,9 @@
 
     Punt the 'guest' user #74737.
 
+    Add support for loopback dm-crypt by Dylan Carlson #73598 and for gpg 
+    dm-crypt by Lars Strojny #75659.
+
   27 Jan 2004; Roy Marples <uberlord@gentoo.org>:
 
     removed udhcpc-* and dhclient-* helper modules and replaced them with a
